--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,14 @@
 body {
+    margin: 0;
     background-color: yellowgreen;
+}
+
+nav {
+    background-color: rgb(50, 70, 12);
+    padding: 20px 0 0 0;
+
+    display: grid;
+    grid-auto-flow: column;
+    justify-content: center;
+    gap: 20px;
 }
