Make clicked button have '.act'

--- a/src/styles.css
+++ b/src/styles.css
@@ -20,3 +20,8 @@ header button {
     border: none;
     padding: 20px 60px;
 }
+
+header button.act {
+    background-color: yellowgreen;
+    color: rgba(0, 0, 0, 0.808);
+}
