--- a/src/styles.css
+++ b/src/styles.css
@@ -28,6 +28,13 @@ header button.act {
 
 #content > div {
     max-width: 800px;
-    margin: 0 auto;
-    background-color: aliceblue;
+    margin: 20px auto;
+    padding: 40px;
+    background-color: rgb(77, 124, 0);
+    border-radius: 20px;
+    border-bottom: 3px solid rgb(23, 73, 0);
+}
+
+h1 {
+    margin-top: 0;
 }
