Add styling to text elements

--- a/src/styles.css
+++ b/src/styles.css
@@ -34,8 +34,19 @@ header button.act {
     background-color: rgb(77, 124, 0);
     border-radius: 20px;
     border-bottom: 3px solid rgb(23, 73, 0);
+
+    display: grid;
+    justify-items: center;
 }
 
 h1 {
     margin-top: 0;
+}
+
+h1, h3, p {
+    text-align: center;
+    background-color: rgb(205, 255, 148);
+    border-bottom: 2px solid rgb(23, 73, 0);
+    border-radius: 5px 5px 0 0;
+    padding: 1em;
 }
