--- a/src/styles.css
+++ b/src/styles.css
@@ -43,12 +43,16 @@ h1 {
     margin-top: 0;
 }
 
-h1, h3, p, ul {
+h1, h3, p, .dish-div {
     text-align: center;
     background-color: rgb(205, 255, 148);
     border-bottom: 2px solid rgb(23, 73, 0);
     border-radius: 5px 5px 0 0;
     padding: 1em;
+}
+
+.dish-div {
+    font-size: 1.5rem;
 }
 
 ul {
