--- a/src/styles.css
+++ b/src/styles.css
@@ -43,7 +43,7 @@ h1 {
     margin-top: 0;
 }
 
-h1, h3, p, .list {
+h1, h3, p, .list, .card {
     text-align: center;
     background-color: rgb(205, 255, 148);
     border-bottom: 2px solid rgb(23, 73, 0);
@@ -69,4 +69,10 @@ li {
     color: rgb(236, 255, 214);
     padding: 10px 10px;
     border-bottom: 3px solid rgb(236, 255, 214);
+}
+
+.card {
+    justify-self: start;
+    width: 400px;
+    padding: 10px;
 }
